final changes hopefully

--- a/index.html
+++ b/index.html
@@ -8,18 +8,37 @@
       content="Frontend Mentor challenge for a profile card component"
     />
 
+    <!-- IMAGES -->
     <link rel="preload" href="./assets/images/image-victor.webp" as="image" />
+    <link rel="preload" href="./assets/images/bg-pattern-card.svg" as="image" />
+    <link rel="preload" href="./assets/images/bg-pattern-top.svg" as="image" />
+    <link
+      rel="preload"
+      href="./assets/images/bg-pattern-bottom.svg"
+      as="image"
+    />
 
+    <!-- FONT -->
+    <link
+      rel="preload"
+      href="./assets/fonts/KumbhSans-VariableFont_YOPQ,wght.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+
+    <!-- FAVICON -->
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./assets/images/favicon-32x32.png"
     />
 
+    <!-- STYLESHEET -->
     <link rel="stylesheet" href="./css/output.css" />
 
-    <title>Frontend Mentor | Profile card component</title>
+    <title>Profile card component</title>
   </head>
 
   <body
@@ -46,7 +65,7 @@
 
       <hr class="self-stretch mt-3" />
 
-      <ul class="flex px-4 pb-6 gap-10 flex-wrap justify-stretch text-center">
+      <ul class="flex px-4 pb-6 gap-12 flex-wrap justify-center text-center">
         <li class="">
           <span class="font-bold text-xl text-desaturated-blue">80K</span>
           <p class="text-xs text-dark-gray tracking-widest">Followers</p>
